<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/city_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:layoutDirection="rtl"
        android:elevation="4dp"
        app:title="@string/city_list"
        app:titleTextColor="@color/colorTextPrimary"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/city_rv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/city_toolbar"
        android:layout_above="@id/bottom_divider"/>

    <View
        android:id="@+id/bottom_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorDivider"
        android:layout_above="@id/bottom_bar"/>

    <LinearLayout
        android:id="@+id/bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layoutDirection="rtl"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/add_from_list"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/add_from_list"
            android:background="@drawable/background_right_button_light"
            android:drawableLeft="@drawable/ic_list"
            tools:ignore="ButtonStyle,RtlHardcoded" />

        <Button
            android:id="@+id/add_from_map"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/add_from_map"
            android:background="@drawable/background_left_button_light"
            android:drawableRight="@drawable/ic_add_location"
            tools:ignore="ButtonStyle,RtlHardcoded" />

    </LinearLayout>

</RelativeLayout>