<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="32dp"
    android:layoutDirection="rtl"
    app:cardBackgroundColor="@color/colorPrimary"
    app:cardElevation="4dp"
    app:cardCornerRadius="16dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/dialog_yes_no_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textSize="18sp"
            android:textColor="@color/colorTextPrimary"
            tools:text="@string/warning" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimaryDark"/>

        <TextView
            android:id="@+id/dialog_yes_no_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textSize="14sp"
            android:textColor="@color/colorTextPrimary"
            tools:text="مطمئن هستید؟" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layoutDirection="rtl"
            android:background="@color/colorIcon"
            style="?android:attr/buttonBarStyle">

            <Button
                android:id="@+id/dialog_yes_no_btn_negative"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:textColor="@color/colorPrimaryDark"
                style="?android:attr/buttonBarButtonStyle"
                tools:text="@string/cancel" />

            <Button
                android:id="@+id/dialog_yes_no_btn_positive"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:textColor="@color/colorPrimaryDark"
                style="?android:attr/buttonBarButtonStyle"
                tools:text="@string/ok" />

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>