<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGrey100">

    <android.support.v7.widget.Toolbar
        android:id="@+id/forecast_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:layoutDirection="rtl"
        android:elevation="4dp"
        app:title="@string/forecast_weather_title"
        app:titleTextColor="@color/colorGrey900"
        android:layout_alignParentTop="true"/>

    <ProgressBar
        android:id="@+id/forecast_progress_bar"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_margin="32dp"
        android:indeterminate="true"
        android:layout_below="@id/forecast_toolbar"
        android:layout_centerHorizontal="true"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/forecast_progress_bar" >

        <RelativeLayout
            android:id="@+id/forecast_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <TextView
                android:id="@+id/forecast_temp_graph_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:gravity="center"
                android:padding="8dp"
                android:textSize="14sp"
                android:textColor="@color/colorGrey50"
                android:text="@string/forecast_temp_graph_label"
                android:background="@color/colorGreyTransparent500"/>

            <com.abohava.views.PlotterView
                android:id="@+id/forecast_temp_plotter"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_below="@id/forecast_temp_graph_label"
                app:drawYAxis="true"
                app:drawXAxis="true"
                app:dataType="2"
                app:drawingColor="@color/colorTextPrimary"
                android:background="@color/colorIcon"
                android:alpha=".5"/>

            <TextView
                android:id="@+id/forecast_weather_list_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_below="@id/forecast_temp_plotter"
                android:gravity="center"
                android:padding="8dp"
                android:textSize="14sp"
                android:textColor="@color/colorGrey50"
                android:text="@string/forecast_weather_list_label"
                android:background="@color/colorGreyTransparent500"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/forecast_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/forecast_weather_list_label"
                android:layoutDirection="ltr"
                android:padding="4dp"/>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>